# agent

./: .gitignore  Dockerfile  README.md  agent.cabal  agent.lock-8.0.2  agent.lock-8.2.1
main/: agent.hs
src/Agent/: Protocol.hs  Remote.hs
src/Agent/Data/: Clock.hs  Log.hs  MatrixClock.hs  Random.hs  Timer.hs  VectorClock.hs
test/: test.hs
test/Test/Agent/: Gen.hs
test/Test/Agent/Data/: Clock.hs  Log.hs  MatrixClock.hs  Random.hs  Timer.hs  VectorClock.hs
