name: agent
version: 0.0.1
license: BSD3
author: Mark Hibberd <mark@hibberd.id.au>
maintainer: Mark Hibberd <mark@hibberd.id.au>
copyright: (c) 2018 Mark Hibberd
cabal-version: >= 1.24
build-type: Simple
description:
  IOHK - CH/OTP Test Task.

library
  default-language: Haskell2010

  build-depends:
      base >= 3 && < 5
    , binary == 0.8.*
    , containers >= 0.5.9.1 && < 0.7
    , distributed-process == 0.7.*
    , mwc-random == 0.13.*
    , primitive == 0.*
    , time >= 1.6 && < 1.10
    , transformers == 0.5.*
    , vector == 0.12.*
    , vector-binary-instances == 0.2.*

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Agent.Protocol
    Agent.Remote

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs: test
  build-depends:
      base >= 3 && < 5
    , containers >= 0.5.9.1 && < 0.7
    , hedgehog == 0.5.*
    , mwc-random == 0.13.*
    , agent
    , vector == 0.12.*
    , vector-algorithms == 0.7.*

  ghc-options:
    -Wall
    -threaded
    -O2

executable agent
  default-language: Haskell2010
  ghc-options:
    -Wall
    -threaded
    -O2
    -rtsopts -with-rtsopts "-T -N"

  main-is:
    main/agent.hs

  build-depends:
      base
    , agent
    , distributed-process == 0.7.*
    , distributed-process-simplelocalnet == 0.2.*
    , mwc-random == 0.13.*
    , network == 2.*
    , optparse-applicative == 0.14.*
    , vector == 0.12.*
